Fixed overlapping

--- a/styles/nav.css
+++ b/styles/nav.css
@@ -9,6 +9,7 @@ header {
 header {
     position: fixed;
     width: 100%;
+    top: 0;
 }
 
 .logo {
