--- a/styles/styles.css
+++ b/styles/styles.css
@@ -29,6 +29,7 @@ div.main
 {
 	/* background-color: red; */
 	margin: auto;
+	margin-top: 100px;
 	width: 50%;
 	text-align: center;
 }
